outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-28_00-20-56/evaluations/problem_eval766863692787527471_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to the destination node if its direct distance is ≤95% of the best product, ensuring efficiency and flexibility. The heuristic emphasizes maximizing the product while occasionally overriding to the destination for optimal path efficiency.}
                                                               ^
SyntaxError: invalid character '≤' (U+2264)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to the destination node if its direct distance is ≤95% of the best product, ensuring efficiency and flexibility. The heuristic emphasizes maximizing the product while occasionally overriding to the destination for optimal path efficiency.}
                                                               ^
SyntaxError: invalid character '≤' (U+2264)
